--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,8 +7,11 @@ html
 
     = csrf_meta_tags
 
-    = javascript_pack_tag 'application'
+    = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'bootstrap'
+
+    = javascript_include_tag 'application'
+    = javascript_pack_tag 'application'
 
   body
 
