--- a/app/views/learning/topics/_topic.html.slim
+++ b/app/views/learning/topics/_topic.html.slim
@@ -1,16 +1,24 @@
-li.list-group-item
-  .row
-    .col-11
-      = (['» '] * (topic.ancestor_topics.count - 1)).join
-      = topic.title
-    .col-1
-      .btn-group.topic_actions
-        button.btn.btn-sm.dropdown-toggle type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-          = t('.status')
-        .dropdown-menu
-          = link_to t('.skipped'), edit_administration_topic_path(topic), class: 'dropdown-item'
-          = link_to t('.done'), administration_topic_path(topic), method: :delete, data: { confirm: t('.are_you_sure') }, class: 'dropdown-item'
-          = link_to t('.failed'), administration_topic_path(topic), method: :delete, data: { confirm: t('.are_you_sure') }, class: 'dropdown-item'
+li.list-group-item: .row: .col-12
+  = (['» '] * (topic.ancestor_topics.count - 1)).join
+  = topic.title
+  .float-right: .btn-group
+    - if topic.accomplishments.where(user_id: current_user.id).exists?
+      - accompishment = topic.accomplishments.find_by(user_id: current_user.id)
+
+      button.btn.btn-sm.dropdown-toggle[
+        class=(accompishment.skipped? ? 'btn-info' : 'btn-success')
+        type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+      ]
+        = t(".#{accompishment.status}")
+      .dropdown-menu
+        = link_to t('.skipped'), learning_topic_accomplishment_path(topic, status: 'skipped'), class: 'dropdown-item', method: :put
+        = link_to t('.done'), learning_topic_accomplishment_path(topic, status: 'done'), class: 'dropdown-item', method: :put
+    - else
+      button.btn.btn-sm.dropdown-toggle type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+        = t('.status')
+      .dropdown-menu
+        = link_to t('.skipped'), learning_topic_accomplishment_path(topic, status: 'skipped'), class: 'dropdown-item', method: :post
+        = link_to t('.done'), learning_topic_accomplishment_path(topic, status: 'done'), class: 'dropdown-item', method: :post
 
 - if topic.subtopics.any?
   = render partial: 'learning/topics/topic', collection: topic.subtopics, as: :topic
