--- a/app/views/admin/topics/edit.html.slim
+++ b/app/views/admin/topics/edit.html.slim
@@ -4,6 +4,6 @@ h1
   - else
     = t('.topic.edit')
 
-= simple_form_for topic, url: administration_topics_path do |f|
+= simple_form_for topic, url: admin_topics_path do |f|
   = f.input :title
   = f.submit
