--- a/app/views/admin/topics/new.html.slim
+++ b/app/views/admin/topics/new.html.slim
@@ -5,7 +5,7 @@ h1
     = t('.topic.new')
 
 
-= simple_form_for topic, url: administration_topics_path do |f|
+= simple_form_for topic, url: admin_topics_path do |f|
   = f.input :title
   = f.input :parent_topic_id, as: :hidden, input_html: { value: f.object.parent_topic_id || parent_topic_id }
   = f.submit
