--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,9 +29,9 @@ html
               = link_to t('.home'), root_path, class: 'nav-link'
             - if current_user.is_a?(AdminUser)
               li.nav-item
-                = link_to t('.topics_management'), administration_topics_path, class: 'nav-link'
+                = link_to t('.topics_management'), admin_topics_path, class: 'nav-link'
               li.nav-item
-                = link_to t('.students'), administration_students_path, class: 'nav-link'
+                = link_to t('.students'), admin_students_path, class: 'nav-link'
 
       .navbar-nav.flex-row.ml-md-auto.d-none.d-md-flex
         .col-1
