--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,9 +10,6 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'bootstrap'
 
-    = javascript_include_tag 'application'
-    = javascript_pack_tag 'application'
-
   body
 
     header.navbar.navbar-light.bg-light
@@ -26,12 +23,14 @@ html
         #main-menu.collapse.navbar-collapse
           ul.navbar-nav
             li.nav-item.active
-              = link_to t('.home'), root_path, class: 'nav-link'
+              = link_to t('.menu.home'), root_path, class: 'nav-link'
             - if current_user.is_a?(AdminUser)
-              li.nav-item
-                = link_to t('.topics_management'), admin_topics_path, class: 'nav-link'
-              li.nav-item
-                = link_to t('.students'), admin_students_path, class: 'nav-link'
+              li.nav-item.dropdown
+                = link_to t('.menu.admin'), '#', \
+                  class: 'nav-link dropdown-toggle', role: "button", data: { toggle: "dropdown" }
+                .dropdown-menu
+                  = link_to t('.menu.topics'), admin_topics_path, class: 'dropdown-item'
+                  = link_to t('.menu.students'), admin_students_path, class: 'dropdown-item'
 
       .navbar-nav.flex-row.ml-md-auto.d-none.d-md-flex
         .col-1
@@ -42,3 +41,5 @@ html
     .container
       main.col-12.bd-content.py-md-3.pl-md-5
         = yield
+    = javascript_include_tag 'application'
+    = javascript_pack_tag 'application'
