--- a/app/views/admin/students/index.html.slim
+++ b/app/views/admin/students/index.html.slim
@@ -25,9 +25,9 @@ table.table.table-striped.table-hover
         td = student.full_name
         td = link_to student.github_url, student.github_url
         td
-          - accomplishment_percent = 100.0 / leaf_topics.count
+          - accomplishment_percent = 100.0 / finished_topics.count
           .progress
-            - leaf_topics.each do |topic|
+            - finished_topics.each do |topic|
               - progress_title = topic.title
               - topic_accomplishment = student.accomplishments.detect { |it| it.topic == topic }
               - progress_title << " | #{l(topic_accomplishment.updated_at, format: :short)}" if topic_accomplishment
@@ -38,9 +38,6 @@ table.table.table-striped.table-hover
                 data-toggle="tooltip"
                 class=(topic_accomplishment ? (topic_accomplishment.done? ? 'bg-success' : 'bg-info') : nil)
               ]
-          - last_accomplishment = student.accomplishments.last
-          - if last_accomplishment
-            | #{last_accomplishment.topic.title} (#{l(last_accomplishment.created_at.to_date, format: :short)})
         td
           = link_to edit_admin_student_path(student), class: 'text-warning' do
             = fa_icon('edit')
