Allow to filter topics by group

--- a/app/views/admin/topics/index.html.slim
+++ b/app/views/admin/topics/index.html.slim
@@ -1,5 +1,9 @@
 h1= t('.title')
 
+= render 'admin/shared/user_groups_dropdown'
+
+br
+
 ul.list-group
   = render partial: 'admin/topics/topic', collection: topics
 
