--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, student] do |f|
+= simple_form_for [:admin, user] do |f|
   = f.input :first_name
   = f.input :last_name
   = f.submit
