--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,7 +30,7 @@ html
                   class: 'nav-link dropdown-toggle', role: "button", data: { toggle: "dropdown" }
                 .dropdown-menu
                   = link_to t('.menu.topics'), admin_topics_path, class: 'dropdown-item'
-                  = link_to t('.menu.students'), admin_students_path, class: 'dropdown-item'
+                  = link_to t('.menu.users'), admin_users_path, class: 'dropdown-item'
 
       .navbar-nav.flex-row.ml-md-auto.d-none.d-md-flex
         .col-1
