--- a/app/views/admin/topics/_topic.html.slim
+++ b/app/views/admin/topics/_topic.html.slim
@@ -3,7 +3,7 @@ li.list-group-item
     .col-11
       - topic_title = (['» '] * topic.ancestor_topics.count).join + topic.title
       = link_to topic_title, admin_topic_path(topic)
-      - topic.accomplishments.group_by(&:status).each do |status, accomplishments|
+      - topic.accomplishments.where(user_id: users).group_by(&:status).each do |status, accomplishments|
         - accomplishments_title = accomplishments.map(&:user).map(&:full_name).join(', ')
         '
         - if status == 'skipped'
