--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,4 +1,5 @@
-= simple_form_for [:admin, user] do |f|
+= simple_form_for user, as: :user do |f|
   = f.input :first_name
   = f.input :last_name
+  = f.input :github_url
   = f.submit
