--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -30,7 +30,7 @@ table.table.table-striped.table-hover
                 style="width: #{accomplishment_percent}%"
                 title=progress_title
                 data-toggle="tooltip"
-                class=(topic_accomplishment ? (topic_accomplishment.done? ? 'bg-success' : 'bg-info') : nil)
+                class=(topic_accomplishment ? (topic_accomplishment.done? ? 'bg-success' : 'bg-warning') : nil)
               ]
         td
           = link_to edit_admin_user_path(user), class: 'text-warning' do
